[project]
name = "custom-basket-pricer"
version = "0.1.0"
description = "Delta-one custom basket pricing backend service."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0,<0.112.0",
    "uvicorn[standard]>=0.23.0,<0.29.0",
    "pydantic>=2.5.0,<3.0.0",
    "python-multipart>=0.0.9,<0.1.0",
    "prometheus-client>=0.19.0,<0.21.0",
    "pandas>=2.0.0",
    "httpx>=0.24.0,<0.28.0",
    "sse-starlette>=1.8.2,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0"
    ]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
